--- a/app/css/style.css
+++ b/app/css/style.css
@@ -421,6 +421,71 @@ img {
     transition: .2s; }
     .links-menu__link:hover {
       color: #18325E; }
+  .links-menu__dropdownWrap {
+    position: relative; }
+  .links-menu__dropdown {
+    position: absolute;
+    top: 137%;
+    left: -25px;
+    width: 216px;
+    flex: none;
+    z-index: 10;
+    display: none; }
+
+.block-socials {
+  display: flex; }
+  .block-socials__el {
+    margin-right: 29px; }
+
+.tel {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 16px;
+  color: #252526; }
+
+.links-2__el {
+  margin-bottom: 14px; }
+  .links-2__el:last-child {
+    margin-bottom: 0; }
+
+.links-2__link {
+  font-family: 'Roboto';
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: #252526;
+  transition: .2s; }
+  .links-2__link:hover {
+    font-weight: bold;
+    color: #18325E; }
+
+.links-2__el:first-child a {
+  font-weight: bold; }
+
+.dropdown-menu-el {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
+  border-radius: 32px;
+  text-align: left;
+  padding: 29px 24px; }
+  .dropdown-menu-el__links {
+    border-bottom: 1px solid #252526;
+    padding-bottom: 11px; }
+    .dropdown-menu-el__links-el {
+      margin-bottom: 14px; }
+      .dropdown-menu-el__links-el:last-child {
+        margin-bottom: 0; }
+    .dropdown-menu-el__links a {
+      font-family: 'Roboto';
+      font-size: 14px;
+      letter-spacing: 0.03em;
+      color: #252526;
+      transition: .2s; }
+      .dropdown-menu-el__links a:hover {
+        font-weight: bold;
+        color: #18325E; }
+  .dropdown-menu-el__bottom {
+    padding: 10px 0;
+    padding-bottom: 0; }
 
 .title {
   font-family: 'PT Serif';
@@ -429,6 +494,10 @@ img {
   line-height: 1.2; }
   .title_main {
     font-size: 48px; }
+  .title_sec {
+    font-size: 32px; }
+  .title_small {
+    font-size: 24px; }
 
 .text-sec {
   font-family: 'Roboto';
@@ -476,6 +545,154 @@ img {
 .text-bold {
   font-weight: bold; }
 
+.ul-descrp {
+  padding-left: 11px; }
+  .ul-descrp li {
+    font-family: 'Roboto';
+    font-size: 18px;
+    color: #252526;
+    line-height: 1.2;
+    position: relative;
+    padding-left: 16px;
+    margin-bottom: 6px; }
+    .ul-descrp li::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 8px;
+      width: 4px;
+      height: 4px;
+      border-radius: 100%;
+      background: #252526; }
+
+.form-inp {
+  font-family: 'Roboto';
+  font-size: 16px;
+  color: #252526;
+  padding: 15px 20px 0 15px;
+  background: #FFFFFF;
+  border: 1px solid rgba(24, 50, 94, 0.8);
+  border-radius: 10px;
+  width: 100%;
+  height: 55px; }
+
+.form-el {
+  position: relative;
+  width: 100%;
+  display: block; }
+  .form-el__placeholder {
+    font-family: 'Roboto';
+    font-size: 14px;
+    color: #252526;
+    opacity: 0.6;
+    position: absolute;
+    top: 9px;
+    left: 16px; }
+
+.block-form__el {
+  margin-bottom: 17px; }
+
+.block-form__checkbox {
+  margin-top: 28px;
+  margin-bottom: 30px; }
+
+.block-form__btn {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  min-height: 55px; }
+
+.link {
+  color: #18325E;
+  text-decoration-line: underline; }
+
+.checkbox-def {
+  flex: none;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #18325E;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer; }
+  .checkbox-def__dec {
+    width: 11px;
+    height: 10px;
+    display: block;
+    background: url("../img/icons/check.svg") no-repeat center/contain;
+    opacity: 0; }
+  .checkbox-def__inp {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -999;
+    visibility: hidden; }
+    .checkbox-def__inp:checked + .checkbox-def__dec {
+      opacity: 1; }
+
+.checkbox-el {
+  display: flex;
+  align-items: center; }
+  .checkbox-el__text {
+    font-family: 'Roboto';
+    font-size: 16px;
+    color: #252526;
+    margin-left: 16px; }
+
+.noscroll {
+  overflow: hidden; }
+
+.overlay {
+  background: #252526;
+  opacity: 0.4; }
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 999; }
+  .modal__wrap {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding: 20px 20px; }
+  .modal__content {
+    position: relative;
+    z-index: 10; }
+  .modal__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1; }
+
+.modal-content {
+  position: relative;
+  background: #FAF9F9;
+  border-radius: 32px;
+  padding: 48px 48px;
+  max-width: 504px;
+  width: 100%; }
+  .modal-content__close {
+    cursor: pointer;
+    margin-top: 10px; }
+  .modal-content__top {
+    display: flex;
+    justify-content: space-between; }
+  .modal-content__content {
+    margin-top: 20px; }
+    .modal-content__content-title {
+      margin-bottom: 13px; }
+  .modal-content__form {
+    margin-top: 30px; }
+
 html {
   position: relative;
   max-width: 100vw; }
@@ -487,7 +704,8 @@ body {
   color: #252526; }
 
 .wrapper {
-  position: relative; }
+  position: relative;
+  min-height: 200vh; }
 
 .container {
   max-width: 1250px;
@@ -496,6 +714,16 @@ body {
   padding: 0 15px;
   position: relative;
   z-index: 10; }
+
+.nav-menu__mob {
+  display: none;
+  margin-top: 73px; }
+  .nav-menu__mob a {
+    display: block; }
+
+.nav-menu__mail {
+  margin-top: 10px;
+  margin-bottom: 27px; }
 
 .top-menu {
   position: absolute;
@@ -507,16 +735,64 @@ body {
     padding: 26px 0; }
   .top-menu__content {
     text-align: center; }
+  .top-menu__btn {
+    display: none;
+    font-family: 'PT Serif';
+    font-weight: bold;
+    font-size: 18px;
+    color: #18325E;
+    cursor: pointer; }
+  .top-menu__close {
+    cursor: pointer;
+    display: none; }
+  .top-menu__linkLogo {
+    flex: none; }
   .top-menu__nav {
     margin-top: 33px; }
+  .top-menu_active {
+    border: 1px solid rgba(37, 37, 38, 0.3); }
+    .top-menu_active .top-menu__wrap {
+      padding: 14px 0; }
+    .top-menu_active .top-menu__content {
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .top-menu_active .top-menu__nav {
+      margin: 0; }
+    .top-menu_active .top-menu__linkLogo {
+      max-width: 72px;
+      margin-right: 48px; }
+    .top-menu_active .links-menu__link {
+      font-family: 'Roboto';
+      font-size: 14px;
+      letter-spacing: 0.05em;
+      font-weight: bold; }
+    .top-menu_active .links-menu__el {
+      margin-right: 31px; }
+  .top-menu_fixed {
+    position: fixed;
+    background: #FFFFFF;
+    filter: drop-shadow(0px 6px 32px rgba(158, 149, 149, 0.36));
+    border: 0; }
 
 .padding-top-menu {
   padding-top: 160px; }
 
 .sec-header {
   background: url("../img/bg/header.png") no-repeat top/cover;
-  background-color: linear-gradient(180deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0) 68.23%);
   min-height: 100vh; }
+  .sec-header::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 326px;
+    z-index: 1;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0) 68.23%); }
+  .sec-header .container {
+    position: relative;
+    z-index: 10; }
   .sec-header__wrap {
     padding-bottom: 50px; }
   .sec-header__content {
@@ -535,3 +811,170 @@ body {
   .sec-header__bottomText {
     margin-top: 9px;
     text-shadow: 4px 2px 30px rgba(255, 255, 255, 0.8), 4px 2px 20px #FFFFFF; }
+
+@media screen and (max-width: 1300px) {
+  .container {
+    max-width: 991px; } }
+
+@media screen and (max-width: 1000px) {
+  .container {
+    max-width: 768px; } }
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 600px; }
+  .links-menu__link {
+    white-space: nowrap; }
+  .top-menu_home:not(.top-menu_active) .links-menu__el {
+    margin-right: 20px; }
+  .top-menu_home:not(.top-menu_active) .links-menu__link {
+    font-size: 16px; }
+  .top-menu_active .links-menu__el {
+    margin-right: 20px; }
+    .top-menu_active .links-menu__el:last-child {
+      margin-right: 0; }
+  .top-menu_active .top-menu__linkLogo {
+    margin-right: 20px; }
+  .top-menu_active .top-menu__linkLogo {
+    max-width: 60px; }
+  .top-menu_active .links-menu__link {
+    font-size: 13px; } }
+
+@media screen and (max-width: 600px) {
+  .top-menu {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
+    position: fixed; }
+  .top-menu__logo {
+    max-width: 58.3px; }
+  .top-menu__wrap {
+    padding: 6px 0; }
+  .top-menu__btn {
+    display: block; }
+  .top-menu__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+  .top-menu .top-menu__nav {
+    position: absolute;
+    left: -100%;
+    transition: .2s;
+    top: 100%;
+    max-height: 100vh;
+    overflow-y: auto;
+    margin: 0;
+    width: 100%;
+    background: #FAF9F9;
+    padding: 56px 15px;
+    padding-bottom: 103px;
+    text-align: left; }
+    .top-menu .top-menu__nav.active {
+      left: 0; }
+    .top-menu .top-menu__nav .nav-menu__link {
+      display: block; }
+    .top-menu .top-menu__nav .links-menu__el {
+      margin: 0;
+      margin-bottom: 38px; }
+    .top-menu .top-menu__nav .links-menu__link {
+      font-family: 'Roboto';
+      font-size: 18px;
+      font-weight: bold;
+      color: #252526;
+      letter-spacing: 0; }
+    .top-menu .top-menu__nav .links-menu__dropdown {
+      position: static;
+      padding: 0;
+      background: transparent;
+      display: block;
+      box-shadow: none;
+      border: 0;
+      margin-top: 26px;
+      padding: 0 10px;
+      margin-bottom: 53px; }
+    .top-menu .top-menu__nav .dropdown-menu-el__links a {
+      font-size: 18px;
+      letter-spacing: 0px; }
+    .top-menu .top-menu__nav .dropdown-menu-el__links-el {
+      margin-bottom: 24.5px; }
+      .top-menu .top-menu__nav .dropdown-menu-el__links-el:last-child {
+        margin-bottom: 0; }
+    .top-menu .top-menu__nav .dropdown-menu-el__links {
+      padding-bottom: 0;
+      border: 0;
+      margin-bottom: 16px; }
+    .top-menu .top-menu__nav .links-2__link {
+      font-family: 'Roboto';
+      font-size: 18px;
+      letter-spacing: 0px; }
+    .top-menu .top-menu__nav .links-2__el {
+      margin-bottom: 25px; }
+      .top-menu .top-menu__nav .links-2__el:last-child {
+        margin-bottom: 0; }
+  .nav-menu__mob {
+    display: block; }
+  .text-info {
+    font-size: 16px; }
+  .padding-top-menu {
+    padding-top: 55.73px; }
+  .title_main {
+    font-size: 32px;
+    letter-spacing: -0.005em; }
+  .sec-header__content {
+    margin-top: 0; }
+  .sec-header__wrap {
+    padding: 34px 0; }
+  .sec-header__title {
+    margin-bottom: 27px; }
+  .text-sec {
+    line-height: 1.55; }
+  .sec-header__btn {
+    width: 100%; }
+  .sec-header__info {
+    font-size: 0;
+    margin: 0;
+    line-height: 0;
+    margin-right: 12px; }
+    .sec-header__info .info-dec__img {
+      margin: 0;
+      max-width: 112px; }
+  .sec-header__bottomText {
+    margin: 0;
+    padding-top: 5px; }
+  .sec-header__bottomInfo {
+    display: flex;
+    align-items: center; }
+    .sec-header__bottomInfo .text-info {
+      font-size: 16px; }
+  .sec-header__btn {
+    margin-bottom: 46px; }
+  .sec-header {
+    background: #FAF9F9;
+    min-height: 0; }
+    .sec-header::after {
+      display: none; }
+  .modal__wrap {
+    padding: 0; }
+  .modal-content {
+    border-radius: 0;
+    min-height: 100vh;
+    padding: 26px 15px;
+    padding-right: 20px;
+    width: 100%;
+    max-width: 100%; }
+  .title_sec {
+    font-size: 24px;
+    line-height: 1.25; }
+  .modal-content__close {
+    margin-top: 2px; }
+  .title_small {
+    font-size: 20px; }
+  .ul-descrp li {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 1px; }
+  .modal-content__content-title {
+    margin-bottom: 5px; }
+  .modal-content__form {
+    margin-top: 15px; }
+  .block-form__btn {
+    width: 100%; } }
