--- a/app/sass/components/_main.scss
+++ b/app/sass/components/_main.scss
@@ -15,6 +15,7 @@ body{
 .wrapper{
 	position: relative;
 	// height: 100vh;
+	min-height: 200vh;
 }
 
 
@@ -27,20 +28,83 @@ body{
 	z-index: 10;
 }
 
+.nav-menu{
+	&__mob{
+		display: none;
+		margin-top: 73px;
+		a{
+			display: block;
+		}
+	}
+	&__mail{
+		margin-top: 10px;
+		margin-bottom: 27px;
+	}
+}
+
 .top-menu{
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	z-index: 100;
+	// transition: .2s;
 	&__wrap{
 		padding: 26px 0;
 	}
 	&__content{
 		text-align: center;
 	}
+	&__btn{
+		display: none;
+		font-family: 'PT Serif';
+		font-weight: bold;
+		font-size: 18px;
+		color: #18325E;
+		cursor: pointer;
+	}
+	&__close{
+		cursor: pointer;
+		display: none;
+	}
+	&__linkLogo{
+		flex: none;
+	}
 	&__nav{
 		margin-top: 33px;
+	}
+	&_active{
+		border: 1px solid rgba(#252526, 0.3);
+		.top-menu__wrap{
+			padding: 14px 0;
+		}
+		.top-menu__content{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+		.top-menu__nav{
+			margin: 0;
+		}
+		.top-menu__linkLogo{
+			max-width: 72px;
+			margin-right: 48px;
+		}
+		.links-menu__link{
+			font-family: 'Roboto';
+			font-size: 14px;
+			letter-spacing: 0.05em;
+			font-weight: bold;
+		}
+		.links-menu__el{
+			margin-right: 31px;
+		}
+	}
+	&_fixed{
+		position: fixed;
+		background: #FFFFFF;
+		filter: drop-shadow(0px 6px 32px rgba(158, 149, 149, 0.36));
+		border: 0;
 	}
 }
 
@@ -50,7 +114,20 @@ body{
 
 .sec-header{
 	background: url('../img/bg/header.png') no-repeat top / cover;
-	background-color: linear-gradient(180deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0) 68.23%);
+	&::after{
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 326px;
+		z-index: 1;
+		background: linear-gradient(180deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0) 68.23%);
+	}
+	.container{
+		position: relative;
+		z-index: 10;
+	}
 	min-height: 100vh;
 	&__wrap{
 		padding-bottom: 50px;
