--- a/app/sass/components/_main.scss
+++ b/app/sass/components/_main.scss
@@ -1,7 +1,7 @@
 html{
-	// overflow-x: hidden;
 	position: relative;
 	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 body{
@@ -9,7 +9,7 @@ body{
 	font-weight: 400;
 	position: relative;
 	color: #252526;
-	// overflow: hidden;
+	overflow-x: hidden;
 }
 
 .wrapper{
@@ -114,6 +114,7 @@ body{
 
 .sec-header{
 	background: url('../img/bg/header.png') no-repeat top / cover;
+	background-attachment: fixed;
 	&::after{
 		content: '';
 		position: absolute;
@@ -130,7 +131,7 @@ body{
 	}
 	min-height: 100vh;
 	&__wrap{
-		padding-bottom: 50px;
+		padding-bottom: 58px;
 	}
 	&__content{
 		margin-left: auto;
@@ -152,5 +153,163 @@ body{
 	&__bottomText{
 		margin-top: 9px;
 		text-shadow: 4px 2px 30px rgba(255, 255, 255, 0.8), 4px 2px 20px #FFFFFF;
+	}
+}
+
+.sec-descrp{
+	background: #FAF9F9;
+	&__wrap{
+		padding: 54px 0;
+		padding-bottom: 43px;
+	}
+	&__content{
+		padding: 0 20px;
+	}
+}
+
+.sec-services{
+	background-color: #fff;
+	&__wrap{
+		padding: 133px 0;
+		padding-bottom: 50px;
+	}
+	&__content{
+		margin-top: 46px;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 1066px;
+	}}
+
+.sec-work{
+	background-color: #fff;
+	&__wrap{
+		padding: 66px 0;
+		padding-bottom: 60px;
+	}
+	&__content{
+		margin-top: 49px;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 1101px;
+	}
+}
+
+.sec-strategy{
+	background: #FAF9F9;
+	&__wrap{
+		padding: 81px 0;
+		padding-bottom: 58px;
+	}
+	&__content{
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 1148px;
+		width: 100%;
+		margin-top: 61px;
+	}
+}
+
+.sec-reviews{
+	background-color: #fff;
+	&__wrap{
+		padding: 132px 0;
+		padding-bottom: 50px;
+	}
+	&__content{
+		.block-reviews__el{
+			padding-top: 47px;
+			padding-bottom: 20px;
+		}
+	}
+	&__bottom{
+		text-align: center;
+		margin-top: 47px;
+	}
+}
+
+.sec-articles{
+	&__wrap{
+		padding: 79px 0;
+	}
+}
+
+.sec-form{
+	background-color: #fff;
+	&__wrap{
+		padding: 22px 0;
+		padding-bottom: 103px;
+	}
+	&__content{
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 1001px;
+	}
+}
+
+.footer{
+	background: #FAF9F9;
+	&__wrap{
+		padding: 65px 0;
+	}
+	&__content{
+		display: flex;
+	}
+	&__col{
+		width: 15%;
+		margin-right: 2%;
+		&_last{
+			margin-right: 0;
+			margin-left: auto;
+			width: 23.5%;
+			&-img{
+				margin-bottom: 1px;
+			}
+		}
+		&-block{
+			margin-bottom: 43px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+		&-title{
+			font-family: 'Roboto';
+			font-weight: bold;
+			font-size: 14px;
+			color: #252526;
+			margin-bottom: 20px;
+			display: block;
+		}
+		&-links{
+			li{
+				margin-bottom: 14px;
+				&, a{
+					font-family: 'Roboto';
+					font-size: 14px;
+					color: #252526;
+				}
+			}
+		}
+	}
+	&__socials{
+		margin-top: 37px;
+	}
+	&__bottom{
+		display: flex;
+		justify-content: flex-end;
+		align-items: center;
+		margin-right: 215px;
+		margin-top: 7px;
+		&-links{
+			display: flex;
+			align-items: center;
+			margin-left: 18px;
+			&-dec{
+				height: 15px;
+				width: 1px;
+				background: #252526;
+				margin-left: 7px;
+				margin-right: 7px;
+			}
+		}
 	}
 }
