--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -4,6 +4,8 @@
 @import 'components/_fonts.scss';
 
 // plagins
+@import 'components/owl.carousel.min';
+@import 'components/owl.theme.default.min';
 
 
 @import 'components/_variables.scss';
