--- a/app/sass/components/_components.scss
+++ b/app/sass/components/_components.scss
@@ -18,6 +18,9 @@
 		&:hover{
 			color: #18325E;
 		}
+		&.active{
+			color: #18325E;
+		}
 	}
 	&__dropdownWrap{
 		position: relative;
@@ -333,6 +336,11 @@
 		padding: 0 10px;
 		margin-bottom: 20px;
 		max-width: 221px;
+	}
+	&_black{
+		.descrp-el__text{
+			color: #252526;
+		}
 	}
 }
 
@@ -670,7 +678,7 @@
 		width: 100%;
 	}
 	&__content{
-		margin-top: 24px;
+		margin-top: 17px;
 	}
 	&__inputs{
 		display: flex;
@@ -683,5 +691,64 @@
 	&__btn{
 		margin-top: 20px;
 		padding: 18px 63px;
+	}
+}
+
+i{
+	font-style: italic;
+}
+
+.wrap-article{
+	line-height: 1.7;
+	p{
+		min-height: 28.7px;
+	}
+}
+
+.question-el{
+	background: #FAF9F9;
+	box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+	border-radius: 32px;
+	transition: .2s;
+	&:hover{
+		box-shadow: 0px 6px 32px rgba(158, 149, 149, 0.36);
+	}
+	&__top{
+		padding: 23px 39px;
+		padding-right: 26px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		cursor: pointer;
+	}
+	&__btn{
+		flex: none;
+		margin-left: 20px;
+	}
+	&__body{
+		display: none;
+		padding: 0 38px;
+		padding-right: 119px;
+		padding-bottom: 35px;
+		margin-top: -10px;
+		p{
+			margin-bottom: 2px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+	}
+	&.active{
+		.question-el__btn{
+			circle + line{
+				display: none;
+			}
+		}
+	}
+}
+
+.block-questions{
+	&__el{
+		margin-bottom: 17px;
 	}
 }
