--- a/app/sass/components/_main.scss
+++ b/app/sass/components/_main.scss
@@ -9,7 +9,8 @@ body{
 	font-weight: 400;
 	position: relative;
 	color: #252526;
-	overflow-x: hidden;
+	background-color: #fff;
+	// overflow-x: hidden;
 }
 
 .wrapper{
@@ -24,8 +25,8 @@ body{
 	width: 100%;
 	margin: 0 auto;
 	padding: 0 15px;
-	position: relative;
 	z-index: 10;
+	position: relative;
 }
 
 .nav-menu{
@@ -112,6 +113,10 @@ body{
 	padding-top: 160px;
 }
 
+.padding-top-menu-active{
+	padding-top: 84px;
+}
+
 .sec-header{
 	background: url('../img/bg/header.png') no-repeat top / cover;
 	background-attachment: fixed;
@@ -156,8 +161,84 @@ body{
 	}
 }
 
+.sec-header-page{
+	background-repeat: no-repeat;
+	background-position: top center;
+	background-size: cover;
+	position: relative;
+	&::before{
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+		background: #fff;
+		opacity: 0.5;
+	}
+	.container{
+		z-index: 10;
+	}
+	&__wrap{
+		text-align: center;
+		padding: 31px 0;
+		padding-bottom: 75px;
+	}
+	&__content{
+		margin-top: 86px;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 618px;
+	}
+	&__title{
+		margin-bottom: 30px;
+	}
+	&__btn{
+		margin-top: 32px;
+	}
+	&__links{
+		justify-content: space-between;
+		.links-menu__el{
+			margin-right: 0;
+		}
+		.links-menu__link{
+			font-family: 'Roboto';
+			letter-spacing: 0.03em;
+		}
+	}
+}
+
+.sec-services-page{
+	.container{
+		z-index: 10;
+	}
+	.sec-header-page{
+		position: relative;
+		z-index: 1;
+	}
+	&__tabs{
+		position: absolute;
+		top: 115px;
+		left: 0;
+		width: 100%;
+		z-index: 100;
+	}
+	&__content{
+		&-el{
+			display: none;
+			&:first-child{
+				display: block;
+			}
+		}
+	}
+}
+
 .sec-descrp{
 	background: #FAF9F9;
+	&_white{
+		background-color: #fff;
+	}
 	&__wrap{
 		padding: 54px 0;
 		padding-bottom: 43px;
@@ -244,6 +325,27 @@ body{
 		margin-right: auto;
 		max-width: 1001px;
 	}
+	&_2{
+		.sec-form__wrap{
+			padding: 83px 0;
+		}
+		.sec-form__content{
+			max-width: 1035px;
+		}
+		.block-form-2__body{
+			margin-top: 16px;
+		}
+		.block-form-2__img{
+			margin-right: 57px;
+		}
+		.block-form-2__content{
+			margin-top: 24px;
+		}
+		.block-form-2__btn{
+			padding-left: 34px;
+			padding-right: 34px;
+		}
+	}
 }
 
 .footer{
@@ -311,5 +413,27 @@ body{
 				margin-right: 7px;
 			}
 		}
+	}
+}
+
+.sec-plan{
+	padding: 40px 0;
+	&__wrap{
+		background: #FAF9F9;
+		border-radius: 32px;
+		padding: 42px 38px;
+	}
+	&__content{
+		margin-top: 20px;
+	}
+}
+
+.sec-questions{
+	&__wrap{
+		padding: 50px 0;
+		padding-bottom: 92px;
+	}
+	&__content{
+		margin-top: 48px;
 	}
 }
