--- a/app/css/style.css
+++ b/app/css/style.css
@@ -657,6 +657,12 @@ img {
     z-index: 10;
     display: none; }
 
+.text-link {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 16px;
+  color: #18325E; }
+
 .block-socials {
   display: flex; }
   .block-socials__el {
@@ -726,6 +732,8 @@ img {
     font-size: 32px; }
   .title_small {
     font-size: 24px; }
+  .title_small2 {
+    font-size: 18px; }
   .title_margin {
     margin-bottom: 25px; }
 
@@ -895,7 +903,7 @@ img {
     width: 25%;
     padding: 0 10px;
     margin-bottom: 20px;
-    max-width: 221px; }
+    max-width: 230px; }
   .block-descrp_black .descrp-el__text {
     color: #252526; }
 
@@ -1177,7 +1185,8 @@ img {
       margin-bottom: 20px; }
   .block-form-2__btn {
     margin-top: 20px;
-    padding: 18px 63px; }
+    padding: 18px 63px;
+    min-width: 208px; }
 
 i {
   font-style: italic; }
@@ -1185,7 +1194,16 @@ i {
 .wrap-article {
   line-height: 1.7; }
   .wrap-article p {
-    min-height: 28.7px; }
+    min-height: 26.7px; }
+  .wrap-article h3 {
+    font-family: 'PT Serif';
+    font-weight: bold;
+    color: #18325E;
+    line-height: 1.2;
+    font-size: 32px; }
+  .wrap-article ul li {
+    list-style: inside;
+    margin-bottom: 3px; }
 
 .question-el {
   background: #FAF9F9;
@@ -1220,6 +1238,174 @@ i {
 .block-questions__el {
   margin-bottom: 17px; }
 
+.ul-dec {
+  list-style: none !important; }
+  .ul-dec li {
+    list-style: none !important;
+    position: relative;
+    padding-left: 23px;
+    margin-bottom: 5px; }
+    .ul-dec li::after {
+      content: '';
+      position: absolute;
+      top: 5px;
+      left: 0;
+      width: 16px;
+      height: 16px;
+      background: url("../img/icons/checkDec.svg") no-repeat center/contain; }
+
+.options-el {
+  background: #FAF9F9;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 32px;
+  padding: 37px 34px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  transition: .2s; }
+  .options-el:hover {
+    box-shadow: 0px 6px 32px rgba(158, 149, 149, 0.36); }
+  .options-el__body {
+    margin-top: 19px;
+    margin-bottom: auto; }
+    .options-el__body p {
+      margin-bottom: 28px; }
+      .options-el__body p:last-child {
+        margin-bottom: 0; }
+  .options-el__link {
+    display: block;
+    margin-top: 21px; }
+  .options-el__btn {
+    display: inline-flex;
+    margin-top: 35px;
+    padding: 20px 33px; }
+
+.block-options {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-right: -10px; }
+  .block-options__el {
+    width: 33.3333%;
+    padding: 0 10px; }
+    .block-options__el .options-el {
+      height: 100%; }
+
+.files-el {
+  display: flex;
+  align-items: center; }
+  .files-el__icon {
+    flex: none;
+    margin-right: 11px; }
+  .files-el__text {
+    font-family: 'Roboto';
+    font-size: 14px;
+    text-decoration-line: underline;
+    color: #18325E; }
+
+.block-files {
+  display: flex;
+  flex-wrap: wrap; }
+  .block-files__el {
+    max-width: 33.3333%;
+    margin-bottom: 20px;
+    margin-right: 55px; }
+
+.facts-el__icon {
+  margin-bottom: 14px; }
+
+.facts-el__text {
+  line-height: 1.4; }
+  .facts-el__text span {
+    color: #18325E;
+    font-weight: bold; }
+
+.block-facts {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-right: -30px; }
+  .block-facts__el {
+    width: 33.333333%;
+    padding: 0 30px;
+    margin-bottom: 59px; }
+
+.info-el {
+  background: #FAF9F9;
+  border-radius: 32px;
+  padding: 43px 39px;
+  padding-right: 59px;
+  display: flex; }
+  .info-el__count {
+    flex: none;
+    font-family: 'EB Garamond';
+    font-weight: 500;
+    font-size: 24px;
+    color: #B39013;
+    width: 32px;
+    height: 32px;
+    border: 1px solid #B39013;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    margin-right: 14px; }
+  .info-el__body {
+    margin-top: 3px; }
+  .info-el__title {
+    font-family: 'Roboto';
+    margin-bottom: 17px; }
+  .info-el__text {
+    line-height: 1.7; }
+
+.block-info__el {
+  margin-bottom: 16px; }
+
+.pwp-el {
+  text-align: center;
+  max-width: 506px; }
+  .pwp-el__img {
+    filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.2));
+    border-radius: 0px 0px 8px 8px; }
+  .pwp-el__dec {
+    position: relative;
+    width: 1px;
+    background: #B39013;
+    height: 57px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 100%;
+    margin-top: 3px; }
+    .pwp-el__dec::after {
+      content: '';
+      position: absolute;
+      left: 50%;
+      bottom: -5px;
+      transform: translateX(-50%);
+      border: 1px solid #B39013;
+      width: 3px;
+      height: 3px;
+      border-radius: 100%; }
+  .pwp-el__title {
+    font-family: 'Roboto';
+    font-weight: bold;
+    font-size: 18px;
+    color: #18325E;
+    margin-top: 15px; }
+
+.block-pwp {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -32px;
+  margin-right: -32px;
+  margin-bottom: -100px; }
+  .block-pwp__el {
+    width: 50%;
+    padding: 0 32px;
+    margin-bottom: 100px; }
+    .block-pwp__el:nth-child(2n) {
+      margin-top: 66px; }
+
 .noscroll {
   overflow: hidden; }
 
@@ -1239,6 +1425,7 @@ i {
   .modal__wrap {
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
@@ -1253,6 +1440,31 @@ i {
     width: 100%;
     height: 100%;
     z-index: 1; }
+  .modal_login .modal__wrap {
+    justify-content: flex-start;
+    padding-top: 65px; }
+  .modal_login__logo {
+    position: relative;
+    z-index: 10;
+    margin-bottom: 32px;
+    width: 85px; }
+  .modal_login .modal-content__top {
+    text-align: center;
+    align-items: center;
+    justify-content: center; }
+  .modal_login .modal-content__close {
+    margin: 0;
+    margin-left: auto; }
+  .modal_login .title {
+    margin-left: auto; }
+  .modal_login__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top; }
 
 .modal-content {
   position: relative;
@@ -1273,6 +1485,29 @@ i {
       margin-bottom: 13px; }
   .modal-content__form {
     margin-top: 30px; }
+
+.modal-content_login {
+  max-width: 464px;
+  padding: 33px 31px; }
+  .modal-content_login .modal-content__top {
+    margin-bottom: 25px;
+    padding-left: 15px; }
+  .modal-content_login__text {
+    letter-spacing: 0.05em;
+    margin-bottom: 15px; }
+  .modal-content_login .modal-content__content {
+    margin-top: 0; }
+  .modal-content_login .modal-content__form {
+    margin-top: 0; }
+  .modal-content_login__bottom {
+    display: flex;
+    margin-top: 27px;
+    align-items: center; }
+    .modal-content_login__bottom .block-form__btn {
+      width: 52%;
+      margin-right: 24px; }
+    .modal-content_login__bottom .text-info-2 {
+      color: #18325E; }
 
 html {
   position: relative;
@@ -1403,7 +1638,8 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
-  position: relative; }
+  position: relative;
+  background-attachment: fixed; }
   .sec-header-page::before {
     content: '';
     position: absolute;
@@ -1413,7 +1649,7 @@ body {
     height: 100%;
     z-index: 1;
     background: #fff;
-    opacity: 0.5; }
+    opacity: 0.4; }
   .sec-header-page .container {
     z-index: 10; }
   .sec-header-page__wrap {
@@ -1424,7 +1660,7 @@ body {
     margin-top: 86px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 618px; }
+    max-width: 678px; }
   .sec-header-page__title {
     margin-bottom: 30px; }
   .sec-header-page__btn {
@@ -1436,6 +1672,25 @@ body {
     .sec-header-page__links .links-menu__link {
       font-family: 'Roboto';
       letter-spacing: 0.03em; }
+    .sec-header-page__links_center {
+      justify-content: center; }
+      .sec-header-page__links_center .links-menu__el {
+        margin-right: 32px; }
+        .sec-header-page__links_center .links-menu__el:last-child {
+          margin-right: 0; }
+  .sec-header-page_2::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0) 68.23%); }
+  .sec-header-page_2 .sec-header-page__content {
+    margin-top: 0; }
+  .sec-header-page_2 .sec-header-page__wrap {
+    padding: 125px 0;
+    padding-bottom: 84px; }
 
 .sec-services-page .container {
   z-index: 10; }
@@ -1605,6 +1860,67 @@ body {
 .sec-questions__content {
   margin-top: 48px; }
 
+.sec-options__wrap {
+  padding: 86px 0;
+  padding-bottom: 30px; }
+
+.sec-options__content {
+  max-width: 1066px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 48px; }
+
+.sec-files__wrap {
+  padding: 28px 0;
+  padding-bottom: 63px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 1066px; }
+
+.sec-files__content {
+  margin-top: 33px; }
+
+.sec-facts__wrap {
+  padding: 97px 0px;
+  padding-bottom: 32px; }
+
+.sec-facts__content {
+  width: 100%;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 47px; }
+
+.sec-info__wrap {
+  padding: 59px 0;
+  padding-bottom: 109px; }
+
+.sec-info__content {
+  margin-top: 49px; }
+
+.sec-pwp {
+  background: #FAF9F9; }
+  .sec-pwp__wrap {
+    padding: 78px 0;
+    padding-bottom: 61px; }
+  .sec-pwp__content {
+    max-width: 1140px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto; }
+  .sec-pwp__bottom {
+    text-align: center;
+    margin-top: 83px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 642px;
+    width: 100%; }
+    .sec-pwp__bottom-btn {
+      margin-top: 30px;
+      padding: 17px 33px; }
+
 @media screen and (max-width: 1300px) {
   .container {
     max-width: 991px; }
@@ -1660,7 +1976,14 @@ body {
   .sec-services__wrap {
     padding-top: 50px; }
   .sec-header-page__links .links-menu__link {
-    font-size: 16px; } }
+    font-size: 16px; }
+  .block-options__el {
+    width: 50%;
+    margin-bottom: 16px; }
+  .sec-options__wrap {
+    padding-top: 40px; }
+  .sec-facts__wrap {
+    padding-top: 50px; } }
 
 @media screen and (max-width: 768px) {
   .container {
@@ -1717,7 +2040,15 @@ body {
   .sec-form_2 .block-form-2 {
     display: block; }
   .sec-form_2 .sec-form__wrap {
-    padding: 50px 0; } }
+    padding: 50px 0; }
+  .block-options__el {
+    width: 100%; }
+  .sec-files__wrap {
+    padding-bottom: 30px; }
+  .block-facts__el {
+    width: 50%; }
+  .sec-info__wrap {
+    padding-bottom: 50px; } }
 
 @media screen and (max-width: 600px) {
   .top-menu {
@@ -2108,7 +2439,9 @@ body {
         margin-top: 6px; }
       .block-descrp_black .descrp-el .descrp-el__text {
         font-size: 16px;
-        line-height: 1.5; }
+        line-height: 1.5;
+        display: flex;
+        align-items: center; }
   .sec-plan {
     padding: 22px 0; }
   .sec-plan__wrap {
@@ -2140,4 +2473,90 @@ body {
     align-items: flex-start; }
   .question-el__body {
     padding: 0 16px;
-    padding-bottom: 24px; } }
+    padding-bottom: 24px; }
+  .wrap-article h3 {
+    font-size: 24px; }
+  .wrap-article p {
+    min-height: 22.7px; }
+  .ul-dec li {
+    padding-left: 30px; }
+  .sec-options__wrap {
+    padding-top: 28px; }
+  .sec-options__content {
+    margin-top: 26px; }
+  .options-el__title {
+    font-size: 24px;
+    text-align: center;
+    display: block;
+    width: 100%; }
+  .options-el {
+    padding: 24px 25px;
+    box-shadow: 0px 6px 32px rgba(158, 149, 149, 0.36); }
+  .options-el__body p {
+    margin-bottom: 22px; }
+  .options-el__link {
+    margin-top: 13px; }
+  .options-el__btn {
+    display: flex;
+    width: 100%; }
+  .sec-files__top .title {
+    font-size: 24px; }
+  .sec-files__wrap {
+    padding: 7px 0; }
+  .block-files {
+    margin-left: -12px;
+    margin-right: -12px; }
+  .block-files__el {
+    margin-right: 0;
+    width: 50%;
+    max-width: 100%;
+    padding: 0 12px; }
+  .files-el__icon {
+    max-width: 26px; }
+  .sec-files__content {
+    margin-top: 25px; }
+  .files-el__text {
+    font-size: 14px; }
+  .block-facts {
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    margin: 0;
+    margin-bottom: -20px; }
+  .block-facts__el {
+    width: 136px;
+    flex: none;
+    max-width: none;
+    padding: 0;
+    margin-bottom: 10px;
+    margin-right: 24px; }
+  .sec-facts__wrap {
+    padding-top: 17px; }
+  .facts-el__icon {
+    width: 48px;
+    height: 48px; }
+  .sec-facts__content {
+    margin-top: 25px; }
+  .facts-el__text {
+    font-size: 14px; }
+  .sec-facts__wrap {
+    padding-bottom: 0; }
+  .sec-info__wrap {
+    padding: 30px 0;
+    padding-bottom: 50px; }
+  .sec-info__content {
+    margin-top: 19px; }
+  .info-el {
+    padding: 22px 17px;
+    position: relative; }
+    .info-el__count {
+      position: absolute;
+      top: 22px;
+      left: 17px; }
+    .info-el__title {
+      padding-left: 47px;
+      min-height: 32px; }
+  .info-el__title {
+    font-size: 16px;
+    margin-bottom: 7px; }
+  .info-el__text {
+    line-height: 1.5; } }
