--- a/app/sass/components/_components.scss
+++ b/app/sass/components/_components.scss
@@ -36,6 +36,13 @@
 	}
 }
 
+.text-link{
+	font-family: 'Roboto';
+	font-weight: bold;
+	font-size: 16px;
+	color: #18325E;
+}
+
 .block-socials{
 	display: flex;
 	&__el{
@@ -123,11 +130,11 @@
 	&_sec{
 		font-size: 32px;
 	}
-	&_med{
-
-	}
 	&_small{
 		font-size: 24px;
+	}
+	&_small2{
+		font-size: 18px;
 	}
 	&_margin{
 		margin-bottom: 25px;
@@ -335,7 +342,7 @@
 		width: 25%;
 		padding: 0 10px;
 		margin-bottom: 20px;
-		max-width: 221px;
+		max-width: 230px;
 	}
 	&_black{
 		.descrp-el__text{
@@ -691,6 +698,7 @@
 	&__btn{
 		margin-top: 20px;
 		padding: 18px 63px;
+		min-width: 208px;
 	}
 }
 
@@ -701,7 +709,20 @@ i{
 .wrap-article{
 	line-height: 1.7;
 	p{
-		min-height: 28.7px;
+		min-height: 26.7px;
+	}
+	h3{
+		font-family: 'PT Serif';
+	    font-weight: bold;
+	    color: #18325E;
+	    line-height: 1.2;
+		font-size: 32px;
+	}
+	ul{
+	    li{
+	    	list-style: inside;
+	    	margin-bottom: 3px;
+	    }
 	}
 }
 
@@ -750,5 +771,213 @@ i{
 .block-questions{
 	&__el{
 		margin-bottom: 17px;
+	}
+}
+
+.ul-dec{
+	list-style: none !important;
+	li{
+		list-style: none !important;
+		position: relative;
+		padding-left: 23px;
+		margin-bottom: 5px;
+		&::after{
+			content: '';
+			position: absolute;
+			top: 5px;
+			left: 0;
+			width: 16px;
+			height: 16px;
+			background: url('../img/icons/checkDec.svg') no-repeat center / contain;
+		}
+	}
+}
+
+.options-el{
+	background: #FAF9F9;
+	box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+	border-radius: 32px;
+	padding: 37px 34px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	transition: .2s;
+	&:hover{
+		box-shadow: 0px 6px 32px rgba(158, 149, 149, 0.36);
+	}
+	&__body{
+		margin-top: 19px;
+		margin-bottom: auto;
+		p{
+			margin-bottom: 28px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+	}
+	&__link{
+		display: block;
+		margin-top: 21px;
+	}
+	&__btn{
+		display: inline-flex;
+		margin-top: 35px;
+		padding: 20px 33px;
+	}
+}
+
+.block-options{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -10px;
+	margin-right: -10px;
+	&__el{
+		width: 33.3333%;
+		padding: 0 10px;
+		.options-el{
+			height: 100%;
+		}
+	}
+}
+
+.files-el{
+	display: flex;
+	align-items: center;
+	&__icon{
+		flex: none;
+		margin-right: 11px;
+	}
+	&__text{
+		font-family: 'Roboto';
+		font-size: 14px;
+		text-decoration-line: underline;
+		color: #18325E;
+	}
+}
+
+.block-files{
+	display: flex;
+	flex-wrap: wrap;
+	&__el{
+		max-width: 33.3333%;
+		margin-bottom: 20px;
+		margin-right: 55px;
+	}
+}
+
+.facts-el{
+	&__icon{
+		margin-bottom: 14px;
+	}
+	&__text{
+		line-height: 1.4;
+		span{
+			color: #18325E;
+			font-weight: bold;
+		}
+	}
+}
+
+.block-facts{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -30px;
+	margin-right: -30px;
+	&__el{
+		width: 33.333333%;
+		padding: 0 30px;
+		margin-bottom: 59px;
+	}
+}
+
+.info-el{
+	background: #FAF9F9;
+	border-radius: 32px;
+	padding: 43px 39px;
+	padding-right: 59px;
+	display: flex;
+	&__count{
+		flex: none;
+		font-family: 'EB Garamond';
+		font-weight: 500;
+		font-size: 24px;
+		color: #B39013;
+		width: 32px;
+		height: 32px;
+		border: 1px solid #B39013;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border-radius: 100%;
+		margin-right: 14px;
+	}
+	&__body{
+		margin-top: 3px;
+	}
+	&__title{
+		font-family: 'Roboto';
+		margin-bottom: 17px;
+	}
+	&__text{
+		line-height: 1.7;
+	}
+}
+
+.block-info{
+	&__el{
+		margin-bottom: 16px;
+	}
+}
+
+.pwp-el{
+	text-align: center;
+	max-width: 506px;
+	&__img{
+		filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.2));
+		border-radius: 0px 0px 8px 8px;
+	}
+	&__dec{
+		position: relative;
+		width: 1px;
+		background: #B39013;
+		height: 57px;
+		margin-left: auto;
+		margin-right: auto;
+		border-radius: 100%;
+		margin-top: 3px;
+		&::after{
+			content: '';
+			position: absolute;
+			left: 50%;
+			bottom: -5px;
+			transform: translateX(-50%);
+			border: 1px solid #B39013;
+			width: 3px;
+			height: 3px;
+			border-radius: 100%;
+		}
+	}
+	&__title{
+		font-family: 'Roboto';
+		font-weight: bold;
+		font-size: 18px;
+		color: #18325E;
+		margin-top: 15px;
+	}
+}
+
+.block-pwp{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -32px;
+	margin-right: -32px;
+	margin-bottom: -100px;
+	&__el{
+		width: 50%;
+		padding: 0 32px;
+		margin-bottom: 100px;
+		&:nth-child(2n){
+			margin-top: 66px;
+		}
 	}
 }
