--- a/app/sass/components/_main.scss
+++ b/app/sass/components/_main.scss
@@ -166,6 +166,7 @@ body{
 	background-position: top center;
 	background-size: cover;
 	position: relative;
+    background-attachment: fixed;
 	&::before{
 		content: '';
 		position: absolute;
@@ -175,7 +176,7 @@ body{
 		height: 100%;
 		z-index: 1;
 		background: #fff;
-		opacity: 0.5;
+		opacity: 0.4;
 	}
 	.container{
 		z-index: 10;
@@ -189,7 +190,7 @@ body{
 		margin-top: 86px;
 		margin-left: auto;
 		margin-right: auto;
-		max-width: 618px;
+		max-width: 678px;
 	}
 	&__title{
 		margin-bottom: 30px;
@@ -205,6 +206,33 @@ body{
 		.links-menu__link{
 			font-family: 'Roboto';
 			letter-spacing: 0.03em;
+		}
+		&_center{
+			justify-content: center;
+			.links-menu__el{
+				margin-right: 32px;
+				&:last-child{
+					margin-right: 0;
+				}
+			}
+		}
+	}
+	&_2{
+		&::after{
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: linear-gradient(180deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0) 68.23%);
+		}
+		.sec-header-page__content{
+			margin-top: 0;
+		}
+		.sec-header-page__wrap{
+			padding: 125px 0;
+			padding-bottom: 84px;
 		}
 	}
 }
@@ -435,5 +463,83 @@ body{
 	}
 	&__content{
 		margin-top: 48px;
+	}
+}
+
+.sec-options{
+	&__wrap{
+		padding: 86px 0;
+		padding-bottom: 30px;
+	}
+	&__content{
+		max-width: 1066px;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 48px;
+	}
+}
+
+.sec-files{
+	&__wrap{
+		padding: 28px 0;
+		padding-bottom: 63px;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+		max-width: 1066px;
+	}
+	&__content{
+		margin-top: 33px;
+	}
+}
+
+.sec-facts{
+	&__wrap{
+		padding: 97px 0px;
+		padding-bottom: 32px;
+	}
+	&__content{
+		width: 100%;
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 47px;
+	}
+}
+
+.sec-info{
+	&__wrap{
+		padding: 59px 0;
+		padding-bottom: 109px;
+	}
+	&__content{
+		margin-top: 49px;
+	}
+}
+
+.sec-pwp{
+	background: #FAF9F9;
+	&__wrap{
+		padding: 78px 0;
+		padding-bottom: 61px;
+	}
+	&__content{
+		max-width: 1140px;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	&__bottom{
+		text-align: center;
+		margin-top: 83px;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 642px;
+		width: 100%;
+		&-btn{
+			margin-top: 30px;
+			padding: 17px 33px;
+		}
 	}
 }
