--- a/app/sass/components/_modal.scss
+++ b/app/sass/components/_modal.scss
@@ -19,6 +19,7 @@
 	&__wrap{
 		min-height: 100vh;
 		display: flex;
+		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		position: relative;
@@ -35,6 +36,42 @@
 		width: 100%;
 		height: 100%;
 		z-index: 1;
+	}
+	&_login{
+		.modal__wrap{
+			justify-content: flex-start;
+			padding-top: 65px;
+		}
+		.modal-content{
+			
+		}
+		&__logo{
+			position: relative;
+			z-index: 10;
+			margin-bottom: 32px;
+			width: 85px;
+		}
+		.modal-content__top{
+			text-align: center;
+			align-items: center;
+			justify-content: center;
+		}
+		.modal-content__close{
+			margin: 0;
+			margin-left: auto;
+		}
+		.title{
+			margin-left: auto;
+		}
+		&__overlay{
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: top;
+		}
 	}
 }
 
@@ -64,5 +101,36 @@
 	}
 	&__form{
 		margin-top: 30px;
+	}
+}
+
+.modal-content_login{
+	max-width: 464px;
+	padding: 33px 31px;
+	.modal-content__top{
+		margin-bottom: 25px;
+		padding-left: 15px;
+	}
+	&__text{
+		letter-spacing: 0.05em;
+		margin-bottom: 15px;
+	}
+	.modal-content__content{
+		margin-top: 0;
+	}
+	.modal-content__form{
+		margin-top: 0;
+	}
+	&__bottom{
+		display: flex;
+		margin-top: 27px;
+		align-items: center;
+		.block-form__btn{
+			width: 52%;
+			margin-right: 24px;
+		}
+		.text-info-2{
+			color: #18325E;
+		}
 	}
 }
