--- a/app/css/style.css
+++ b/app/css/style.css
@@ -656,6 +656,12 @@ img {
     flex: none;
     z-index: 10;
     display: none; }
+  .links-menu_2 .links-menu__el {
+    margin-right: 30px; }
+    .links-menu_2 .links-menu__el:last-child {
+      margin-right: 0; }
+  .links-menu_2 .links-menu__link {
+    font-family: 'Roboto'; }
 
 .text-link {
   font-family: 'Roboto';
@@ -1183,6 +1189,9 @@ img {
     .block-form-2__inputs-el {
       width: 48.5%;
       margin-bottom: 20px; }
+      .block-form-2__inputs-el_width {
+        width: 100%;
+        max-width: 500px; }
   .block-form-2__btn {
     margin-top: 20px;
     padding: 18px 63px;
@@ -1405,6 +1414,63 @@ i {
     margin-bottom: 100px; }
     .block-pwp__el:nth-child(2n) {
       margin-top: 66px; }
+
+.wrap-login-form__el:not(:first-child) {
+  display: none; }
+
+.article-el__img {
+  background: #18325E;
+  border-radius: 32px;
+  height: 210px;
+  width: 100%;
+  object-position: top;
+  object-fit: cover; }
+
+.article-el__body {
+  margin-top: 18px;
+  padding-right: 20px;
+  display: block; }
+
+.article-el__title {
+  font-family: 'PT Serif';
+  font-weight: bold;
+  font-size: 18px;
+  color: #252526;
+  line-height: 1.3;
+  margin-bottom: 8px; }
+
+.article-el__date {
+  font-family: 'Roboto';
+  font-size: 14px;
+  color: #767676;
+  margin-top: 20px;
+  display: block; }
+
+.article-el_big__img {
+  height: auto; }
+
+.article-el_big__title {
+  font-size: 32px;
+  margin-bottom: 16px; }
+
+.article-el_big__body {
+  margin-top: 25px; }
+
+.block-blog {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -12px;
+  margin-right: -12px; }
+  .block-blog__el {
+    width: 25%;
+    padding: 0 12px;
+    margin-bottom: 36px; }
+
+.blog-el__img {
+  height: 288px; }
+
+.blog-el__title {
+  margin-bottom: 16px; }
 
 .noscroll {
   overflow: hidden; }
@@ -1639,7 +1705,8 @@ body {
   background-position: top center;
   background-size: cover;
   position: relative;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  min-height: 100vh; }
   .sec-header-page::before {
     content: '';
     position: absolute;
@@ -1921,6 +1988,32 @@ body {
       margin-top: 30px;
       padding: 17px 33px; }
 
+.block-links-top__wrap {
+  padding: 30px 0; }
+
+.block-articles-top__wrap {
+  padding: 18px 0;
+  padding-bottom: 31px; }
+
+.block-articles-top__content {
+  display: flex;
+  justify-content: space-between; }
+
+.block-articles-top__left {
+  margin-right: 30px;
+  width: 100%; }
+
+.block-articles-top__right {
+  flex: none;
+  width: 309px; }
+
+.block-articles-top .article-el {
+  margin-bottom: 21px; }
+
+.sec-blog__wrap {
+  padding: 96px 0;
+  padding-bottom: 117px; }
+
 @media screen and (max-width: 1300px) {
   .container {
     max-width: 991px; }
@@ -2048,7 +2141,12 @@ body {
   .block-facts__el {
     width: 50%; }
   .sec-info__wrap {
-    padding-bottom: 50px; } }
+    padding-bottom: 50px; }
+  body {
+    overflow-x: hidden; }
+  .sec-header-page_2 .sec-header-page__wrap {
+    padding-bottom: 75px;
+    padding-top: 40px; } }
 
 @media screen and (max-width: 600px) {
   .top-menu {
@@ -2381,14 +2479,16 @@ body {
     margin-bottom: 27px; }
   .footer__wrap {
     padding: 28px 0; }
+  .footer__col-links {
+    margin-top: 12px; }
   .footer__col-title {
-    margin-bottom: 12px; }
+    margin-bottom: 0; }
   .footer__col-links_main {
     display: none; }
     .footer__col-links_main .footer__col-title {
       margin-bottom: 0; }
   .footer__col-block {
-    margin-bottom: 26px; }
+    margin-bottom: 27px; }
   .footer__socials {
     margin-top: 32px; }
   .footer__bottom {
@@ -2559,4 +2659,80 @@ body {
     font-size: 16px;
     margin-bottom: 7px; }
   .info-el__text {
-    line-height: 1.5; } }
+    line-height: 1.5; }
+  .sec-header-page_2 .sec-header-page__wrap {
+    padding: 55px 0;
+    padding-bottom: 17px; }
+  .sec-header-page_2 .sec-header-page__content .sec-header-page__title {
+    padding: 0 20px; }
+  .sec-header-page_2 .sec-header-page__content .sec-header-page__title {
+    margin-bottom: 13px; }
+  .sec-form_2 .sec-form__wrap {
+    padding-bottom: 49px; }
+  .block-pwp {
+    margin: 0;
+    margin-bottom: -52px; }
+  .block-pwp__el {
+    padding: 0;
+    margin: 0;
+    width: 192px;
+    min-width: 50%;
+    margin-bottom: 52px; }
+    .block-pwp__el:nth-child(1), .block-pwp__el:nth-child(3) {
+      width: 192px;
+      margin-right: -54px;
+      position: relative;
+      z-index: 10; }
+  .sec-pwp__wrap {
+    padding: 42px 0; }
+  .pwp-el {
+    text-align: left; }
+  .pwp-el__title {
+    font-size: 14px;
+    line-height: 1.3;
+    margin-top: 13px;
+    padding-right: 40px; }
+  .pwp-el__dec {
+    margin-left: 28px;
+    margin-top: 0;
+    height: 40px; }
+  .block-pwp__el:nth-child(2n) {
+    margin-top: 41px; }
+  .sec-pwp__bottom-text {
+    font-size: 14px; }
+  .sec-pwp__bottom {
+    padding: 0 2px;
+    margin-top: 44px; }
+  .sec-pwp__bottom-btn {
+    width: 100%;
+    margin-top: 21px; }
+  .sec-plan {
+    padding: 34px 0; }
+  .modal_login .modal__wrap {
+    padding-top: 40px;
+    padding-left: 16px;
+    padding-right: 16px; }
+  .modal-content_login__bottom {
+    display: block;
+    margin-top: 24px;
+    text-align: center; }
+  .modal-content_login__bottom .block-form__btn {
+    margin-right: 0;
+    width: 100%;
+    margin-bottom: 24px; }
+  .modal-content_login {
+    min-height: 0;
+    border-radius: 32px;
+    padding: 16px 24px;
+    padding-bottom: 33px; }
+  .sec-header-page {
+    min-height: 0; } }
+
+@media screen and (max-width: 359px) {
+  .block-pwp__el {
+    width: 50%; }
+  .block-pwp__el:nth-child(1), .block-pwp__el:nth-child(3) {
+    margin-right: 0;
+    width: 50%; }
+  .pwp-el__title {
+    padding-right: 0; } }
