--- a/app/sass/components/_components.scss
+++ b/app/sass/components/_components.scss
@@ -34,6 +34,17 @@
 		z-index: 10;
 		display: none;
 	}
+	&_2{
+		.links-menu__el{
+			margin-right: 30px;
+			&:last-child{
+				margin-right: 0;
+			}
+		}
+		.links-menu__link{
+			font-family: 'Roboto';
+		}
+	}
 }
 
 .text-link{
@@ -693,6 +704,10 @@
 		&-el{
 			width: 48.5%;
 			margin-bottom: 20px;
+			&_width{
+				width: 100%;
+				max-width: 500px;
+			}
 		}
 	}
 	&__btn{
@@ -979,5 +994,77 @@ i{
 		&:nth-child(2n){
 			margin-top: 66px;
 		}
+	}
+}
+
+.wrap-login-form{
+	&__el{
+		&:not(:first-child){
+			display: none;
+		}
+	}
+}
+
+.article-el{
+	&__img{
+		background: #18325E;
+		border-radius: 32px;
+		height: 210px;
+		width: 100%;
+		object-position: top;
+		object-fit: cover;
+	}
+	&__body{
+		margin-top: 18px;
+		padding-right: 20px;
+		display: block;
+	}
+	&__title{
+		font-family: 'PT Serif';
+		font-weight: bold;
+		font-size: 18px;
+		color: #252526;
+		line-height: 1.3;
+		margin-bottom: 8px;
+	}
+	&__date{
+		font-family: 'Roboto';
+		font-size: 14px;
+		color: #767676;
+		margin-top: 20px;
+		display: block;
+	}
+	&_big{
+		&__img{
+			height: auto;
+		}
+		&__title{
+			font-size: 32px;
+			margin-bottom: 16px;
+		}
+		&__body{
+			margin-top: 25px;
+		}
+	}
+}
+
+.block-blog{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -12px;
+	margin-right: -12px;
+	&__el{
+		width: 25%;
+		padding: 0 12px;
+		margin-bottom: 36px;
+	}
+}
+
+.blog-el{
+	&__img{
+		height: 288px;
+	}
+	&__title{
+		margin-bottom: 16px;
 	}
 }
